Try first implementation of storage
