# src/main/resources/openapi-img.yml
@@ -62,7 +62,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Image'
+                $ref: '#/components/schemas/ImageMetas'
+        404:
+          description: 'Not found'
     delete:
       summary: 'Supprime une image'
       description: ''
@@ -72,7 +74,7 @@ paths:
           description: 'OK'
   /image/{id}/file:
     get:
-      summary: 'Récupère l.image (données binaires)'
+      summary: "Récupère l'image (données binaires)"
       description: ''
       operationId: getImageFile
       parameters:
@@ -81,7 +83,7 @@ paths:
         200:
           description: 'OK'
           content:
-            image/jpg:
+            image/*:
               schema:
                 type: string
                 format: binary
@@ -89,7 +91,7 @@ paths:
           description: 'Not found'
   /image/{id}/thumb:
     get:
-      summary: 'Génère une miniature de l.image (données binaires)'
+      summary: "Génère une miniature de l'image (données binaires)"
       description: ''
       operationId: getImageThumb
       parameters:
@@ -116,8 +118,22 @@ paths:
 components:
   schemas:
     Image:
-      type: object
       description: Information about an image
+      allOf:
+        - type: object
+          required:
+            - id
+          properties:
+            id:
+              type: integer
+              format: int64
+              minimum: 0
+        - $ref: '#/components/schemas/ImageMetas'
+      xml:
+        name: Image
+    ImageMetas:
+      type: object
+      description: Short metas/infos about image (for use in others paths or schemas)
       properties:
         height:
           type: integer
@@ -127,3 +143,5 @@ components:
           type: integer
           format: int32
           minimum: 0
+      xml:
+        name: ImageMeta
